# WIPP-pyramid-building

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  PyramidBuildingCLITest.cpp  README.md  SimpleReadAndWriteGraph.h  building.cpp  colorGraph.xdot  commandLineCli.cpp  docker-dev-init.sh  index.html  main.cpp  run-simple-test.sh  stitchingVectorParsing.cpp  testBasePerf.cpp  testBasePerfMultiThread.cpp  testBasePerfMultiThreadHTGS.cpp  testDownSamplingOpenCV.cpp  testLibtiff.cpp  testPyramidBuilding.cpp  testPyramidBuildingUbuntu.cpp  testStitchingVectorParser.cpp
benchmarks/: benchmark-1-memory.sh  benchmark-1.sh  benchmark-7-java.sh  benchmark-7-memory.sh  benchmark-7.sh  benchmark-exectime.sh  benchmark-memory.sh  colorGraph.xdot  graph
cmake-modules/: FindFastImage.cmake
data/: Block.h  BlockRequest.h  BlockType.cpp  BlockType.h  FakeTile.h  Fov.h  Tile.h  TileRequest.h
docs/: benchmarks.md  container-deployment.md  container-init.sh  dev-mac.md  dist.md  dockerhub-README.md  plugin-descriptor.json  run.sh  todos-deployment.md  todos.md
docs/dev/: benchmarks.md  commandLineArgs.md  dev-notes-mac.md  todos-dist.md  todos.md
resources/: circleTiled.tiff
resources/dataset01/: description.md
resources/dataset01/images/: test02-tiled.tif  test02.tif
resources/dataset01/stitching_vector/: img-global-positions-1.txt
resources/dataset02/: description.md
resources/dataset02/images/: hello-r0-c1-tiled.tif  hello-r1-c0-tiled.tif  hello-r1-c1-tiled.tif
resources/dataset02/stitching_vector/: img-global-positions-1.txt
resources/dataset03/stitching_vector/: img-global-positions-1.txt
resources/dataset1/: description.md
resources/dataset1/images/: img_r001_c001.ome.tif  img_r001_c002.ome.tif  img_r001_c003.ome.tif  img_r001_c004.ome.tif  img_r002_c001.ome.tif  img_r002_c002.ome.tif  img_r002_c003.ome.tif  img_r002_c004.ome.tif  img_r003_c001.ome.tif  img_r003_c002.ome.tif  img_r003_c003.ome.tif  img_r003_c004.ome.tif  img_r004_c001.ome.tif  img_r004_c002.ome.tif  img_r004_c003.ome.tif  img_r004_c004.ome.tif
resources/dataset1/stitching_vector/: img-global-positions-1.txt
resources/dataset1/tiled-images/: img_r001_c001.ome.tif  img_r001_c002.ome.tif  img_r001_c003.ome.tif  img_r001_c004.ome.tif  img_r002_c001.ome.tif  img_r002_c002.ome.tif  img_r002_c003.ome.tif  img_r002_c004.ome.tif  img_r003_c001.ome.tif  img_r003_c002.ome.tif  img_r003_c003.ome.tif  img_r003_c004.ome.tif  img_r004_c001.ome.tif  img_r004_c002.ome.tif  img_r004_c003.ome.tif  img_r004_c004.ome.tif
resources/misc/: description..md  pyramidCircleTiled.tiff  tiled16_tracer.tiff  tiledMaison.tiff
resources/original/: hello-r0-c0-tiled.tif  hello-r0-c0.tiff  hello-r0-c1.tiff  hello-r1-c0.tiff  hello-r1-c1.tiff
rules/: PyramidRule.h  WriteTileRule.h
scripts/: convertToTiledTiff.sh  pyramid_building.sh  run_benchmarks.sh  run_benchmarks_java.sh
src/: CMakeLists.txt
src/api/: CommandLineCli.h  Datatype.h  PyramidBuilding.h
src/data/: BlockRequest.h  BlockType.cpp  PartialFov.h  Tile.h  TileRequest.h
src/mem/: Mem.cpp  Mem.h
src/pyramidBuilding/api/: CommandLineCli.h  Datatype.h  OptionsType.h  PyramidBuilding.h
src/pyramidBuilding/data/: BlockRequest.h  BlockType.cpp  BlockType.h  FOV.h  FOVMetadata.h  FOVRequest.h  FOVWithData.h  ImageMetadata.h  PartialFOV.h  PartialFov.h  Pyramid.h  Tile.h  TileBlock.h  TileRequest.h
src/pyramidBuilding/data/deprecated/: PartialFov.h  PartialFovOld.h
src/pyramidBuilding/fastImage/: PyramidTileBuilder.h  PyramidTileLoader.h  RecursiveBlockTraversal.h
src/pyramidBuilding/fastImage/data/: FITileRequest.h  PartialFOV.h
src/pyramidBuilding/fastImage/utils/: PyramidBuilder.h  TileRequestBuilder.h
src/pyramidBuilding/memory/: FOVAllocator.h  TileAllocator.h
src/pyramidBuilding/pyramid/: PyramidBuilder.h  TiffImageLoader.h
src/pyramidBuilding/pyramid/data/: PartialFOV.h  TileRequest.h
src/pyramidBuilding/rules/: DeepZoomDownsampleTileRule.h  DeepZoomDownsamplingRule.h  EmptyTileManager.h  EmptyTileRule.h  FOVTileRule.h  PyramidCacheRule.h  PyramidRule.h  ReleaseFOVMemoryRule.h  ReleaseMemoryRule.h  ReleaseTileMemoryRule.h  TileManager.h  WriteTileRule.h
src/pyramidBuilding/tasks/: BaseTileTask.h  CreateTileTask.h  DeepZoomTileWriter.h  ImageReader.h  PyramidTileBuilder.h  PyramidalTiffWriter.h  TileBuilder.h  TileDownsampler.h  TileResizer.h  WriteDeepZoomTileTask.h  WriteTiffTileTask.h
src/pyramidBuilding/utils/: AverageDownsampler.h  BaseTileGenerator.h  BaseTileGeneratorFastImage.h  BaseTileGeneratorLibTiff.h  BaseTileGeneratorLibTiffWithCache.h  Blender.h  Downsampler.h  FOVCache.h  FOVCacheFastImage.h  GridGenerator.h  Helper.cpp  Helper.h  MatrixAllocator.h  PartialTileCache.h  SingleTiledTiffWriter.h  StitchingVectorParser.h  StitchingVectorParserOld.h  TiffImageLoader.h  TiffTileLoader.h  TileCache.h  TileLoader.h  Utils.h
src/rules/: DeepZoomDownsamplingRule.h  MatrixMemoryRule.h  PyramidRule.h  WriteTileRule.h
src/tasks/: BaseTileTask.h  CreateTileTask.h  Write16UPngTileTask.h  Write32UTiffTileWriter.h  Write8UPngTileTask.h  WriteDeepZoomTileTask.h  WritePngTileTask.h  WriteTiffTileTask.h  WriteTiffTileWriter.h  WriteTileTask.h
src/utils/: BaseTileGenerator.h  BaseTileGeneratorFastImage.h  BaseTileGeneratorSmallFOV.h  Blender.h  FOVCache.h  FOVCacheFastImage.h  GridGenerator.h  Helper.cpp  Helper.h  MatrixAllocator.h  SingleTiledTiffWriter.h  StitchedFOVTileLoader.h  StitchingVectorParser.h
tasks/: BaseTileTask.h  CreateTileTask.h  OutputTask.h  WriteTileTask.h
test/: CMakeLists.txt  PyramidBuildingCLITest.cpp  SimpleReadAndWriteGraph.h  testBasePerf.cpp  testBasePerf.h  testBasePerfMultiThread.cpp  testBasePerfMultiThreadHTGS.cpp  testLibtiff.cpp  testStitchingVectorParser.cpp  traversal.cpp
test-webapp/: index.html  package-lock.json  package.json
tools/: pyramid_building.sh  run_benchmarks.sh  run_benchmarks_java.sh
utils/: BaseTileGenerator.h  FakeTileAllocator.h  MistStitchedImageReader.h  PartialImage.h  SingleTiledTiffWriter.h
webapp-test/: package.json
(+10 files in other folders)
