add_executable(libtiff testLibtiff.cpp)
add_executable(testbasePerfMultiThreadHTGS testBasePerfMultiThreadHTGS.cpp SimpleReadAndWriteGraph.h)
add_executable(pyramidBuildingCLITest PyramidBuildingCLITest.cpp ../src/mem/Mem.cpp)
add_executable(testBasePerf testBasePerf.cpp testBasePerf.h)
add_executable(traversal traversal.cpp)